test/compile-fail/fn__unknown_param_type.he
fn func( a: blah ) //~ ERROR 3004
{
    ret 0;
}
